name:                mos6502-kansas-lava
version:             0.0.0.0
synopsis:            Implementation of the MOS 6502 microprocessor in Kansas Lava
-- description:
license:             BSD3
license-file:        LICENSE
copyright:           (C) 2014 Gergő Érdi <gergo@erdi.hu>
author:              Gergő Érdi
maintainer:          Gergő Érdi <gergo@erdi.hu>
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
        MOS6502.Types
        MOS6502.CPU
        MOS6502.Utils
  other-modules:
        MOS6502.ALU
        MOS6502.Decoder

  build-depends:
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        sized-types >=0.3,
        binary-literal-qq >= 1.0 && < 1.1,
        data-default
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, TypeFamilies, QuasiQuotes
  Ghc-Options:         -Werror
                       -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures

executable mos6502-kansas-lava
  hs-source-dirs:      src
  main-is:             MOS6502/Bench/Main.hs
  other-modules:
        MOS6502.Bench
        MOS6502.Bench.Video
        MOS6502.Bench.GTK

  build-depends:
        mos6502-kansas-lava,
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        sized-types >=0.3,
        binary-literal-qq >= 1.0 && < 1.1,
        bytestring,
        data-default,
        gtk
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, TypeFamilies, QuasiQuotes
  Ghc-Options:
                       -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures
                       -threaded

test-suite tests
  type:                detailed-0.9
  hs-source-dirs:      tests src
  test-module:         MOS6502.Tests.Main
  other-modules:
        MOS6502.Types
        MOS6502.CPU
        MOS6502.ALU
        MOS6502.Decoder
        MOS6502.Utils
        MOS6502.Tests.Framework
        MOS6502.Tests.AllSuiteA
        MOS6502.Tests

  build-depends:
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        sized-types >=0.3,
        binary-literal-qq >= 1.0 && < 1.1,
        data-default,
        bytestring,

        mtl,
        QuickCheck >= 2.7 && < 2.8,
        free >= 4 && < 5,
        kan-extensions >= 4 && < 5,
        cabal-test-quickcheck,
        Cabal >= 1.20
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, TypeFamilies, QuasiQuotes
  Ghc-Options:         -Werror
                       -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures

source-repository head
  type:     git
  location: git://github.com/gergoerdi/mos6502-kansas-lava
